--- a/Report.ipynb
+++ b/Report.ipynb
@@ -305,6 +305,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Khi bộ lọc được áp lên một pixel trong ảnh(tâm của bộ lọc sẽ áp lên pixel đó), phép nhân giữa các giá trị của bộ lọc và các giá trị tương ứng của pixel trong vùng lân cận của pixel đó sẽ được thực hiện. Kết quả của phép nhân này sẽ được cộng lại để gán vào pixel hiện tại\n",
+    "\n",
+    "- VD : vị trí hiện tại là i,j"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -354,6 +364,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- VD: pixel hiện tại là 3: \n",
+    " 3 + 5 = 8 > 3 + 3 = 6"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -396,6 +416,14 @@
    "metadata": {},
    "source": [
     "#### 4. Xóa seam ít quan trọng nhất"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Sau khi xóa seam ít quan trọng nhất dồn các pixel về trái"
    ]
   },
   {
