--- a/Report.ipynb
+++ b/Report.ipynb
@@ -37,72 +37,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "FxQxZTY88VGK"
-   },
-   "outputs": [],
-   "source": [
-    "def edge_detection(image_path, blur_ksize=7, sobel_ksize=1, skipping_threshold=30):\n",
-    "    \"\"\"\n",
-    "    image_path: link to image\n",
-    "    blur_ksize: kernel size parameter for Gaussian Blurry\n",
-    "    sobel_ksize: size of the extended Sobel kernel; it must be 1, 3, 5, or 7.\n",
-    "    skipping_threshold: ignore weakly edge\n",
-    "    \"\"\"\n",
-    "    # read image\n",
-    "    img = cv2.imread(image_path)\n",
-    "    \n",
-    "    # convert BGR to gray\n",
-    "    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
-    "    img_gaussian = cv2.GaussianBlur(gray, (blur_ksize, blur_ksize), 0)\n",
-    "    \n",
-    "    # sobel algorthm use cv2.CV_64F\n",
-    "    sobelx64f = cv2.Sobel(img_gaussian, cv2.CV_64F, 1, 0, ksize=sobel_ksize)\n",
-    "    abs_sobel64f = np.absolute(sobelx64f)\n",
-    "    img_sobelx = np.uint8(abs_sobel64f)\n",
-    "\n",
-    "    sobely64f = cv2.Sobel(img_gaussian, cv2.CV_64F, 1, 0, ksize=sobel_ksize)\n",
-    "    abs_sobel64f = np.absolute(sobely64f)\n",
-    "    img_sobely = np.uint8(abs_sobel64f)\n",
-    "    \n",
-    "    # calculate magnitude\n",
-    "    img_sobel = (img_sobelx + img_sobely)/2\n",
-    "    \n",
-    "    # ignore weakly pixel\n",
-    "    for i in range(img_sobel.shape[0]):\n",
-    "        for j in range(img_sobel.shape[1]):\n",
-    "            if img_sobel[i][j] < skipping_threshold:\n",
-    "                img_sobel[i][j] = 0\n",
-    "            else:\n",
-    "                img_sobel[i][j] = 255\n",
-    "    return img_sobel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "gp7Bg38ei4ho"
-   },
-   "outputs": [],
-   "source": [
-    "#Hiển thị hình ảnh gốc và ảnh đã qua edge detection\n",
-    "img = cv2.imread(\"in.pnm\", 0)\n",
-    "# Find edge with Canny edge detection\n",
-    "edges = edge_detection(\"in.pnm\")\n",
-    "\n",
-    "# display results\n",
-    "plt.subplot(121), plt.imshow(img, cmap='gray')\n",
-    "plt.title('Original Image'), plt.xticks([]), plt.yticks([])\n",
-    "plt.subplot(122), plt.imshow(edges, cmap='gray')\n",
-    "plt.title('Edge Image'), plt.xticks([]), plt.yticks([])\n",
-    "\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "id": "bP75jn2n8XTt"
    },
    "outputs": [],
@@ -254,10 +188,83 @@
     "#### Sau khi phân tích thuật toán seam carving, từ đó có những bước cần thực hiện sau:\n",
     "1. Đọc file ảnh màu input.\n",
     "2. Tiến hành chuyển ảnh màu sang ảnh xám.\n",
-    "3. Sử dụng bộ lọc, tính độ quan trọng của các pixel, từ đó tính toán được các pixel có độ quan trọng thấp nhất.\n",
+    "3. Tính độ quan trọng của các pixel, từ đó tính toán được các pixel có độ quan trọng thấp nhất.\n",
     "4. Tìm seam có độ quan trọng thấp nhất.\n",
     "5. Xóa seam tìm được.\n",
-    "6. Lặp lại việc seam có độ quan trọng thấp nhất và xóa bỏ đến khi tìm được chiều dài mong mu"
+    "6. Lặp lại việc seam có độ quan trọng thấp nhất và xóa bỏ đến khi tìm được chiều dài mong muốn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Để tính độ quan trọng của các pixel, sử dụng edge detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "FxQxZTY88VGK"
+   },
+   "outputs": [],
+   "source": [
+    "def edge_detection(image_path, blur_ksize=7, sobel_ksize=1, skipping_threshold=30):\n",
+    "    \"\"\"\n",
+    "    image_path: link to image\n",
+    "    blur_ksize: kernel size parameter for Gaussian Blurry\n",
+    "    sobel_ksize: size of the extended Sobel kernel; it must be 1, 3, 5, or 7.\n",
+    "    skipping_threshold: ignore weakly edge\n",
+    "    \"\"\"\n",
+    "    # read image\n",
+    "    img = cv2.imread(image_path)\n",
+    "    \n",
+    "    # convert BGR to gray\n",
+    "    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "    img_gaussian = cv2.GaussianBlur(gray, (blur_ksize, blur_ksize), 0)\n",
+    "    \n",
+    "    # sobel algorthm use cv2.CV_64F\n",
+    "    sobelx64f = cv2.Sobel(img_gaussian, cv2.CV_64F, 1, 0, ksize=sobel_ksize)\n",
+    "    abs_sobel64f = np.absolute(sobelx64f)\n",
+    "    img_sobelx = np.uint8(abs_sobel64f)\n",
+    "\n",
+    "    sobely64f = cv2.Sobel(img_gaussian, cv2.CV_64F, 1, 0, ksize=sobel_ksize)\n",
+    "    abs_sobel64f = np.absolute(sobely64f)\n",
+    "    img_sobely = np.uint8(abs_sobel64f)\n",
+    "    \n",
+    "    # calculate magnitude\n",
+    "    img_sobel = (img_sobelx + img_sobely)/2\n",
+    "    \n",
+    "    # ignore weakly pixel\n",
+    "    for i in range(img_sobel.shape[0]):\n",
+    "        for j in range(img_sobel.shape[1]):\n",
+    "            if img_sobel[i][j] < skipping_threshold:\n",
+    "                img_sobel[i][j] = 0\n",
+    "            else:\n",
+    "                img_sobel[i][j] = 255\n",
+    "    return img_sobel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "gp7Bg38ei4ho"
+   },
+   "outputs": [],
+   "source": [
+    "#Hiển thị hình ảnh gốc và ảnh đã qua edge detection\n",
+    "img = cv2.imread(\"in.pnm\", 0)\n",
+    "# Find edge with Canny edge detection\n",
+    "edges = edge_detection(\"in.pnm\")\n",
+    "\n",
+    "# display results\n",
+    "plt.subplot(121), plt.imshow(img, cmap='gray')\n",
+    "plt.title('Original Image'), plt.xticks([]), plt.yticks([])\n",
+    "plt.subplot(122), plt.imshow(edges, cmap='gray')\n",
+    "plt.title('Edge Image'), plt.xticks([]), plt.yticks([])\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -599,9 +606,9 @@
    },
    "source": [
     " - Tối ưu hóa hàm convert từ ảnh RGB sang ảnh xám\n",
-    " - Tính độ quan trọng của các pixel (sử dụng cache memory ở v3 cho tham số x filter, y filter)\n",
+    " - Tính độ quan trọng của các pixel (sử dụng cache memory ở version 3 cho tham số x filter, y filter)\n",
     " - Lấy các pixel có độ quan trọng thấp nhất\n",
-    " - Tìm seam có độ quan trọng nhỏ nhất (sử dụng share memory ở v2)"
+    " - Tìm seam có độ quan trọng nhỏ nhất (sử dụng share memory ở version 2)"
    ]
   },
   {
