cập nhật report

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -23,7 +23,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e14ab702-4fa4-4b82-8167-bc939f8ccca8"
+        "outputId": "4b55663b-c43d-42e7-82cd-92ddbc4f4da4"
       },
       "outputs": [
         {
@@ -878,7 +878,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cddc1a1f-cd19-44fa-fa45-ea066ca05e23"
+        "outputId": "6c5a6bf6-4ff4-482e-a84f-dd93f697a73b"
       },
       "outputs": [
         {
@@ -902,10 +902,10 @@
             "****************************\n",
             "\n",
             "Seam carving by host\n",
-            "Time: 10089.018 ms\n",
+            "Time: 10048.874 ms\n",
             "\n",
             "Seam carving by device\n",
-            "Time: 491.895 ms\n",
+            "Time: 468.880 ms\n",
             "Error: 1.326939\n"
           ]
         }
@@ -922,7 +922,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "552c60aa-f766-420e-90c0-736da9f88c9a"
+        "outputId": "4bbce3da-8e0f-4613-de41-c98feaec5739"
       },
       "outputs": [
         {
@@ -946,10 +946,10 @@
             "****************************\n",
             "\n",
             "Seam carving by host\n",
-            "Time: 10331.188 ms\n",
+            "Time: 9508.702 ms\n",
             "\n",
             "Seam carving by device\n",
-            "Time: 482.407 ms\n",
+            "Time: 467.747 ms\n",
             "Error: 1.326939\n"
           ]
         }
@@ -996,10 +996,86 @@
       "cell_type": "markdown",
       "source": [
         "# 6. Tài liệu tham khảo.\n",
-        "https://github.com/ledat2110/seamCarving_GPU"
+        "https://en.wikipedia.org/wiki/Seam_carving\n",
+        "\n",
+        "https://learnopencv.com/edge-detection-using-opencv/"
       ],
       "metadata": {
         "id": "0iZGIXsgSqSP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###7. Cải tiến theo góp ý của giáo viên.\n",
+        "Thực hiện song song hóa hàm xóa seam có độ quan trọng thấp nhất."
+      ],
+      "metadata": {
+        "id": "5OFgRrpD6HKl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!nvcc \"seamcarving_v4.cu\" -o DA_4"
+      ],
+      "metadata": {
+        "id": "9NvGeEvF6Sv8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!./DA_4 in.pnm 400"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NMeuUYK97_Bv",
+        "outputId": "af515f1c-6e88-4603-f212-c400fb2df65d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            " Kích thước ảnh input (width * height): 640 x 434\n",
+            "\n",
+            " Kích thước ảnh mới (width * height): 400 x 434\n",
+            "**********GPU info**********\n",
+            "Name: Tesla T4\n",
+            "Compute capability: 7.5\n",
+            "Num SMs: 40\n",
+            "Max num threads per SM: 1024\n",
+            "Max num warps per SM: 32\n",
+            "GMEM: 15835398144 bytes\n",
+            "CMEM: 65536 bytes\n",
+            "L2 cache: 4194304 bytes\n",
+            "SMEM / one SM: 65536 bytes\n",
+            "****************************\n",
+            "\n",
+            "Seam carving by host\n",
+            "Time: 9206.553 ms\n",
+            "\n",
+            "Seam carving by device\n",
+            "Time: 667.619 ms\n",
+            "Error: 1.326939\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Link Github nhóm: https://github.com/dragonjjr/21HCB_GPU_Programming"
+      ],
+      "metadata": {
+        "id": "bneCabhRP0ib"
       }
     }
   ],
